--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^22.0.0",
+    "native-base": "^2.3.3",
     "react": "16.0.0-beta.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.1.tar.gz",
+    "react-native-icons": "^0.7.1",
     "react-navigation": "^1.0.0-beta.15"
   },
   "devDependencies": {
